--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "robofriends",
   "version": "0.1.0",
-  "homepage": "https://raymondcuya.github.io/robofriends",
+  "homepage": "https://raymondcuya.github.io/robofriends-redux",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
